[gd_scene load_steps=5 format=3 uid="uid://u174e626pg4g"]

[ext_resource type="Script" uid="uid://dblbrdqcqt7wr" path="res://scripts/runtime/ability_slot.gd" id="1_q3as8"]
[ext_resource type="Texture2D" uid="uid://bq8a57srmg0or" path="res://sprites/synty/borders/SPR_DarkFantasy_Frame_Box_Small_01.png" id="2_smjc0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rwyh"]
bg_color = Color(0.572549, 0.572549, 0.572549, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbg6a"]
bg_color = Color(0.870588, 0, 0, 0.478431)

[node name="ability_button" type="Button"]
process_mode = 1
custom_minimum_size = Vector2(50, 50)
anchors_preset = -1
anchor_right = 0.043
anchor_bottom = 0.077
offset_right = -14.536
offset_bottom = -4.896
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("1_q3as8")

[node name="ability_texture" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
localize_numeral_system = false

[node name="cooldown_overlay" type="ProgressBar" parent="ability_texture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_1rwyh")
theme_override_styles/fill = SubResource("StyleBoxFlat_nbg6a")
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="border_texture" type="TextureRect" parent="."]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("2_smjc0")
expand_mode = 3
